# nonmutability-constraint-simulator

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
docs/: output_format.md  program_description.md  programmer_guide.md  test_method.md
scripts/: run_example.sh
src/ncs/: __init__.py  agent_state.py  agents.py  audit.py  cli.py  config.py  environment.py  metrics.py  pathing.py  runner.py  shield.py  types.py
tests/: test_ncs.py
